# lazyPlan

./: .gitignore  README.md  pyproject.toml
lazyplan/: app.py  cli.py  github.py  lazyplan.css  lazyplan.tcss  models.py  storage.py
lazyplan/screens/: base.py  confirm_delete.py  detail.py  editor.py  github_screen.py  main.py
