[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyplan"
version = "0.1.1"
description = "TUI para capturar y gestionar ideas de proyectos"
readme = "README.md"
authors = [{name = "Marcelo Mastroiani", email = "mastroianimarcelo04@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "typer>=0.9.0",
]

[project.scripts]
lazyplan = "lazyplan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["lazyplan"]
